--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.8'
 
     - name: Install dependencies
       run: |
@@ -28,4 +28,4 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python -m unittest discover
+        python -m unittest discover -s tests -v
